WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144847
JSON.stringify shouldn't use generic get() to access Array.length
https://bugs.webkit.org/show_bug.cgi?id=144847
Summary
JSON.stringify shouldn't use generic get() to access Array.length
Andreas Kling
Reported
2015-05-10 14:05:32 PDT
When we know the value being serialized is a JSArray, we can downcast and call length() directly instead of doing a generic get().
Attachments
Patch
(1.71 KB, patch)
2015-05-10 14:06 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-05-10 14:06:02 PDT
Created
attachment 252825
[details]
Patch
Geoffrey Garen
Comment 2
2015-05-11 09:59:54 PDT
Comment on
attachment 252825
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2015-05-11 10:49:21 PDT
Comment on
attachment 252825
[details]
Patch Clearing flags on attachment: 252825 Committed
r184107
: <
http://trac.webkit.org/changeset/184107
>
WebKit Commit Bot
Comment 4
2015-05-11 10:49:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug