JSON.stringify shouldn't use generic get() to access Array.length <https://webkit.org/b/144847>

Reviewed by Geoffrey Garen.

If the value being serialized is a JSArray object, we can downcast and call its
length() directly instead of doing a generic property lookup.

0.5% progression on Kraken/json-stringify-tinderbox.

* runtime/JSONObject.cpp:
(JSC::Stringifier::Holder::appendNextProperty):


Canonical link: https://commits.webkit.org/162903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184107 268f45cc-cd09-0410-ab3c-d52691b4dbfc